@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.606 2006/02/28 19:47:47 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.607 2006/03/01 02:27:51 agaffney Exp $
 
   28 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIClientController.py:
@@ -12,6 +12,8 @@
   use get_ordered_partition_list() instead of keys().sort() for new_part_list
   check to make sure start sector for primary isn't less than end sector for
   previous extended
+  src/GLIClientController.py:
+  write dns servers to /etc/resolv.conf
 
   27 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIPortage.py:
